ICE-10235 Set default height to 300px to make sure the map is visible when no other style is defined.
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@43867 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/gmap/gMap.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/gmap/gMap.css
@@ -15,7 +15,7 @@
  */
 
 .ice-ace-gmap{
-	height:100%;
+	height:300px;
 	width:100%;
 	}
 	
